// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`test.yml.declapract buildWorkflowSecretsBlock given: the actual test.yml template when: multiple apikeys are required then: it should match expected snapshot 1`] = `
"name: test

on:
  workflow_call:
  push:
    branches-ignore:
      - main # exclude main branch, since deploy workflow triggers on main, and calls the test workflow inside of it already
    tags-ignore:
      - v* # exclude tags, since deploy workflow triggers on tags, and calls the test workflow inside of it already

concurrency:
  group: \${{ github.workflow }}-\${{ github.ref }} # per [workflow] x [branch, tag]
  cancel-in-progress: true #  cancel workflows for non-latest commits

permissions:
  id-token: write # required for oidc
  contents: read

jobs:
  suite:
    uses: ./.github/workflows/.test.yml
    with:
      creds-aws-region: us-east-1
      creds-aws-role-arn: \${{ vars.CREDS_CICD_AWS_DEV_OIDC_ROLE_ARN }} # use aws auth via oidc, if this repo supplies it
    secrets:
      ANTHROPIC_API_KEY: \${{ secrets.ANTHROPIC_API_KEY }}
      OPENAI_API_KEY: \${{ secrets.OPENAI_API_KEY }}
"
`;

exports[`test.yml.declapract buildWorkflowSecretsBlock given: the actual test.yml template when: one apikey is required then: it should match expected snapshot 1`] = `
"name: test

on:
  workflow_call:
  push:
    branches-ignore:
      - main # exclude main branch, since deploy workflow triggers on main, and calls the test workflow inside of it already
    tags-ignore:
      - v* # exclude tags, since deploy workflow triggers on tags, and calls the test workflow inside of it already

concurrency:
  group: \${{ github.workflow }}-\${{ github.ref }} # per [workflow] x [branch, tag]
  cancel-in-progress: true #  cancel workflows for non-latest commits

permissions:
  id-token: write # required for oidc
  contents: read

jobs:
  suite:
    uses: ./.github/workflows/.test.yml
    with:
      creds-aws-region: us-east-1
      creds-aws-role-arn: \${{ vars.CREDS_CICD_AWS_DEV_OIDC_ROLE_ARN }} # use aws auth via oidc, if this repo supplies it
    secrets:
      ANTHROPIC_API_KEY: \${{ secrets.ANTHROPIC_API_KEY }}
"
`;
